finalising brew form display on web page

--- a/public/index.html
+++ b/public/index.html
@@ -749,6 +749,7 @@
         </div>
         <div class="content">
             <div class="list-th  col-grid">
+                <!-- there link is used to sort the brew list, but i don't have enough time to develop for now -->
                 <a href="#brew-list">Date</a>
                 <a href="#brew-list">Coffee</a>
                 <a href="#brew-list">Roaster</a>
@@ -756,7 +757,7 @@
                 <a href="#brew-list">Origin</a>
                 <a href="#brew-list">Rating</a>
             </div>
-            <div class="accordion-container">
+            <div class="accordion-container" style="visibility: hidden;">
                 <article class="ac brew-item">
                     <h2 class="ac-header">
                         <button type="button" class="ac-trigger">
