--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
     </section>
     <section id="coffee">
         <div class="grid-container">
+            <div class="top-white-space"></div>
             <div class="heading">
                 <h1>Coffee.</h1>
                 <button id="add-new-coffee" data-a11y-dialog-show="add-coffee-dialog"
@@ -93,6 +94,7 @@
                     </ul>
                 </section>
             </div>
+            <div class="bottom-white-space"></div>
         </div>
         <div id="add-coffee-dialog" class="dialog-container" aria-hidden="true" role="alertdialog">
             <!-- The dialog overlay -->
@@ -1261,20 +1263,23 @@
             </div>
         </div>
     </section>
+
+    <!-- custom mouse cursor to add more fun to the experience -->
     <div class="cursor"></div>
     <div class="cursor2"></div>
 
-    <script src="custom-cursor.js"></script>
-    <script src="scripts/msf-control.js"></script>
-    <script src="script.js"></script>
-    <script type="module" src="glide-carousel.js"></script>
+    <script type="module" src="scripts/glide-carousel.js"></script>
     <script type="module" src="scripts/interactive-chart.js"></script>
-    <script type="module" src="accordion.js"></script>
-    <script type="module" src="overlay-modal.js"></script>
+    <script type="module" src="scripts/accordion.js"></script>
+    <script type="module" src="scripts/overlay-modal.js"></script>
     <script type="module" src="scripts/colorthief.js"></script>
     <script type="module" src="scripts/tagify.js"></script>
-    <script src="navigation.js"></script>
-    <script src="custom-select.js"></script>
+    <script src="scripts/mobile-form.js"></script>
+    <script src="scripts/custom-cursor.js"></script>
+    <script src="scripts/msf-control.js"></script>
+    <script src="scripts/navigation.js"></script>
+    <script src="scripts/custom-select.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
