last second time fixing bugs

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,7 @@
             <div class="top-white-space"></div>
             <div class="heading">
                 <h1>Coffee.</h1>
+                
                 <button id="add-new-coffee" data-a11y-dialog-show="add-coffee-dialog"
                     class="fill-in white-border black-fill">Add New</button>
             </div>
@@ -465,8 +466,8 @@
                                 <p>1 / 2</p>
                             </div>
                             <div class="progress-button">
-                                <input type="button" class="black-fill white-border" name="back" value="Prev">
-                                <input type="button" class="black-fill white-border" name="next" value="Next">
+                                <input type="button" class="fill-in black-fill white-border" name="back" value="Prev">
+                                <input type="button" class="fill-in black-fill white-border" name="next" value="Next">
                             </div>
                         </div>
                     </div>
@@ -579,9 +580,9 @@
                                 <p>2 / 2</p>
                             </div>
                             <div class="progress-button">
-                                <input type="button" class="black-fill white-border" name="back" value="Prev">
-                                <input type="button" class="black-fill black-border" name="next" value="Next">
-                                <input type="submit" class="white-fill white-border" name="submit" value="Submit"
+                                <input type="button" class="fill-in black-fill white-border" name="back" value="Prev">
+                                <input type="button" class="fill-in black-fill white-border" name="next" value="Next">
+                                <input type="submit" class="fill-in black-fill white-border" name="submit" value="Submit"
                                     data-a11y-dialog-hide="add-coffee-dialog">
                             </div>
                         </div>
