--- a/public/index.html
+++ b/public/index.html
@@ -986,15 +986,15 @@
     <script src="scripts/custom-select.js"></script>
     
     <!-- Include testing images so Parcel bundles them -->
-    <img src="src/testing_images/coffee-1.jpg" style="display: none;" alt="">
-    <img src="src/testing_images/coffee-2.jpg" style="display: none;" alt="">
-    <img src="src/testing_images/coffee-3.jpg" style="display: none;" alt="">
-    <img src="src/testing_images/dripper-origami.jpg" style="display: none;" alt="">
-    <img src="src/testing_images/dripper-v60.jpg" style="display: none;" alt="">
-    <img src="src/testing_images/dripper-orea.jpg" style="display: none;" alt="">
-    <img src="src/testing_images/grinder-c40.jpg" style="display: none;" alt="">
-    <img src="src/testing_images/grinder-ek43.jpg" style="display: none;" alt="">
-    <img src="src/testing_images/grinder-kinu.jpg" style="display: none;" alt="">
+    <img src="src/images/coffee-1.jpg" style="display: none;" alt="">
+    <img src="src/images/coffee-2.jpg" style="display: none;" alt="">
+    <img src="src/images/coffee-3.jpg" style="display: none;" alt="">
+    <img src="src/images/dripper-origami.jpg" style="display: none;" alt="">
+    <img src="src/images/dripper-v60.jpg" style="display: none;" alt="">
+    <img src="src/images/dripper-orea.jpg" style="display: none;" alt="">
+    <img src="src/images/grinder-c40.jpg" style="display: none;" alt="">
+    <img src="src/images/grinder-ek43.jpg" style="display: none;" alt="">
+    <img src="src/images/grinder-kinu.jpg" style="display: none;" alt="">
 </body>
 
 </html>
