--- a/public/index.html
+++ b/public/index.html
@@ -53,27 +53,27 @@
                         <div class="stat-row-1">
                             <div class="stat-item">
                                 <p>The number of beans<br>you tried</p>
-                                <p class="stat-number">7</p>
+                                <p class="stat-number" id="stat-coffees">0</p>
                             </div>
                             <div class="stat-item">
                                 <p>The number of roasters<br>you visited</p>
-                                <p class="stat-number">5</p>
+                                <p class="stat-number" id="stat-roasters">0</p>
                             </div>
                         </div>
                         <div class="stat-row-2">
                             <div class="stat-item">
                                 <p>The number of coffee origins you explored</p>
-                                <p class="stat-number">3</p>
+                                <p class="stat-number" id="stat-origins">0</p>
                             </div>
                         </div>
                         <div class="stat-row-3">
                             <div class="stat-item">
                                 <p>Total brews<br>completed</p>
-                                <p class="stat-number">21</p>
+                                <p class="stat-number" id="stat-brews">0</p>
                             </div>
                             <div class="stat-item">
                                 <p>Total money spent on coffee</p>
-                                <p class="stat-number">$1500</p>
+                                <p class="stat-number" id="stat-money">$0</p>
                             </div>
                         </div>
                     </div>
@@ -771,28 +771,24 @@
                         <div class="form-input-container">
 
                             <div class="form-item is-required">
-                                <label class="brewCoffee">Today, I am going to brew</label>
+                                <span class="form-text">Today, I am going to brew</span>
                                 <div class="custom-select">
                                     <select id="brewCoffee" name="brewCoffee" data-group="0" required>
                                         <option value="" label="Select a coffee" selected="selected">Select a
                                             coffee</option>
                                     </select>
                                 </div>
-                            </div>
-                            <div class="form-item is-required">
-                                <label for="brewDripper">with my</label>
+                                <span class="form-text">with my</span>
                                 <div class="custom-select">
                                     <select id="brewDripper" name="brewDripper" data-group="0" required>
                                         <option value="" label="Select a dripper" selected="selected">Select a
                                             dripper</option>
                                     </select>
                                 </div>
+                                <span class="form-text">dripper.</span>
                             </div>
-                            <span class="form-text">dripper.</span>
-
-
                             <div class="form-item is-required">
-                                <label for="brewGrinder">I am using</label>
+                                <span class="form-text">I am using</span>
                                 <div class="custom-select">
                                     <select id="brewGrinder" name="brewGrinder" data-group="0" required>
                                         <option value="" label="Select a grinder" selected="selected">Select a
@@ -982,6 +978,8 @@
     <script src="scripts/custom-cursor.js"></script>
     <script src="scripts/msf-control.js"></script>
     <script src="scripts/navigation.js"></script>
+    <script type="module" src="supabase-config.js"></script>
+    <script type="module" src="database-service.js"></script>
     <script type="module" src="script.js"></script>
     <script src="scripts/custom-select.js"></script>
     
