Fix brew form layout and dropdown issues
- Restored original brew form layout with separate form-items
- Fixed brew form dropdown display by properly reinitializing custom selects
- Added debugging logs to track dropdown population
- Fixed delete button classes for gadgets and brews
- Added missing deleteGadgetUI function

--- a/public/index.html
+++ b/public/index.html
@@ -778,6 +778,8 @@
                                             coffee</option>
                                     </select>
                                 </div>
+                            </div>
+                            <div class="form-item is-required">
                                 <span class="form-text">with my</span>
                                 <div class="custom-select">
                                     <select id="brewDripper" name="brewDripper" data-group="0" required>
